--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,22 @@
         android:theme="@style/Theme.Android"
         tools:targetApi="31">
         <activity
+            android:name=".intentactivity"
+            android:exported="false"
+            android:label="@string/title_activity_intentactivity"
+            android:theme="@style/Theme.Android" />
+        <activity
+            android:name=".Layoutactivity"
+            android:exported="true"
+            android:label="@string/title_activity_layoutactivity"
+            android:theme="@style/Theme.Android">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
