--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Android"
         tools:targetApi="31">
         <activity
+            android:name=".formactivity"
+            android:exported="false"
+            android:label="@string/title_activity_formactivity"
+            android:theme="@style/Theme.Android" />
+        <activity
             android:name=".intentactivity"
             android:exported="false"
             android:label="@string/title_activity_intentactivity"
